@@ -67,5 +67,33 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">move_line_form</field>
         </record>
 
+        <record model="ir.ui.view" id="move_line_view_list">
+            <field name="model">account.move.line</field>
+            <field name="type">tree</field>
+            <field name="name">move_line_list</field>
+        </record>
+
+        <record model="ir.action.act_window" id="act_move_line_form_completion">
+            <field name="name">Analytic Lines to Complete</field>
+            <field name="res_model">account.move.line</field>
+            <field name="domain"
+                eval="[('analytic_state', '=', 'draft'), ('move_state', '=', 'posted')]"
+                pyson="1"/>
+        </record>
+        <record model="ir.action.act_window.view"
+            id="act_move_line_form_completion_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="move_line_view_list"/>
+            <field name="act_window" ref="act_move_line_form_completion"/>
+        </record>
+        <record model="ir.action.act_window.view"
+            id="act_move_line_form_completion_view2">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="account.move_line_view_form"/>
+            <field name="act_window" ref="act_move_line_form_completion"/>
+        </record>
+        <menuitem parent="account.menu_processing"
+            action="act_move_line_form_completion" id="menu_completion"/>
+
     </data>
 </tryton>
