@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree>
+    <field name="move"/>
+    <field name="origin"/>
+    <field name="description"/>
+    <field name="move_description"/>
+    <field name="date"/>
+    <field name="account"/>
+    <field name="party"/>
+    <field name="debit" sum="Debit"/>
+    <field name="credit" sum="Credit"/>
+    <field name="analytic_state"/>
+</tree>
