@@ -1,3 +1,4 @@
+* Add analytic state on move line
 * Improve account tree creation
 * Remove name, journal, reference, party and active from line
 * Remove currency from account
